--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "2.1.5"
   },
   "dependencies": {
+    "flv.js": "^1.5.0",
     "lodash": "^4.17.11",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
